# GAIL

./: .gitignore  GAIL.py  PPO.py  README.md  SAC.py  algo.py  gail.py  main.py  model.py  policy.pth  pyproject.toml  simple_ppo.py  train_SAC.py
datas/: policy.pth  policy_gail.pth  value.pth  value_gail.pth
models/: actor.pth  c_target.pth  critic.pth
mp4/: openaigym.episode_batch.0.272367.stats.json  openaigym.episode_batch.0.273563.stats.json  openaigym.manifest.0.272367.manifest.json  openaigym.manifest.0.273563.manifest.json  openaigym.video.0.272367.video000000.meta.json  openaigym.video.0.273563.video000000.meta.json
